# equipment-provisioner

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  STANDARDS.md  config.yaml  manifest.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: checks.yml  test.yml
configs/: thinkpad-single-port.yaml
configs/templates/: mikrotik_switch_provisioner.rsc  port-monitor-update.rsc
docs/: API.md  ARCHITECTURE_ISOLATION_REVIEW.md  BRANCHING.md  FIRST_SETUP_PLAN.md  HANDLER_DEVELOPMENT.md  HOST_SETUP.md  KIOSK_ARCHITECTURE.md  SCREENSHOTS.md  TROUBLESHOOTING.md  cambium-config.md  epic-contribution-readiness.md  epic-vendor-isolation-refactor.md  label-pi.html  label-switch.html  mikrotik-netinstall.md  plan-ap-config.md  single-port-setup.md  tarana-protocol.md  wave-credentials-configuration.md
examples/configs/: README.md
image/: .gitignore  Dockerfile.builder  auto-rotate.py  auto-rotate.service  build-in-docker.sh  build.sh  chroot-install.sh  first-boot.sh  firstboot.service
image/config/: opi-config.sh  rpi-config.sh
provisioner/: __init__.py  ap_config.py  cli.py  config.py  config_store.py  config_templates.py  db.py  detector.py  display.py  equipment_registry.py  fingerprint.py  firmware.py  firmware_checker.py  github_sync.py  gpio.py  handler_manager.py  main.py  mode_config.py  notifier.py  port_manager.py  setup_tools.py  telemetry.py  web_server.py
provisioner/firmware_sources/: __init__.py  base.py  cambium.py  mikrotik.py  tachyon.py  ubiquiti.py
provisioner/handlers/: __init__.py  base.py  cambium.py  evolution_digital.py  mikrotik.py  mock.py  tachyon.py  tarana.py  ubiquiti.py
scripts/: README.md  bootstrap.sh  check_py39.py  check_templates.py  deploy.sh  install.sh  setup.sh  setup_network.sh  setup_switch.sh  update_switch_script.sh
systemd/: provisioner-web.service  provisioner.logrotate  provisioner.service
tests/: __init__.py  conftest.py  stubs.py  test_auto_rotate.py  test_base_verify.py  test_bootp_auto_trigger.py  test_cambium_verify.py  test_config.py  test_config_store.py  test_config_templates.py  test_display.py  test_evolution_digital.py  test_fingerprint.py  test_firmware.py  test_firmware_checker.py  test_handler_manager.py  test_handler_properties.py  test_kiosk_image_install.py  test_mikrotik_contract.py  test_mikrotik_detection_ui.py  test_mikrotik_edge_case_detection.py  test_mikrotik_firmware_source.py  test_mikrotik_handler.py  test_netinstall_packages.py  test_port_manager.py  test_provision_flow.py  test_setup_api.py  test_tachyon_asset_flow.py  test_tachyon_handler.py  test_tachyon_tns100.py  test_tachyon_verify.py  test_template_init_order.py  test_ubiquiti_verify.py  test_vendor_registry.py  test_web_pages.py
(+18 files in other folders)
